--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f0fcf7ce7dfe156a53a721c154dd3d34
+APP_SECRET=093095c2bb76691f333dc7504dfa3f8e
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -24,7 +24,7 @@ APP_SECRET=f0fcf7ce7dfe156a53a721c154dd3d34
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/HQTGiay?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/HQTGiay?charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
